--- a/Biking Tracker/Biking Tracker/Base.lproj/Main.storyboard
+++ b/Biking Tracker/Biking Tracker/Base.lproj/Main.storyboard
@@ -13,13 +13,13 @@
         <!--History-->
         <scene sceneID="vo1-KK-A7l">
             <objects>
-                <tableViewController id="XQT-zy-5ni" sceneMemberID="viewController">
+                <tableViewController id="XQT-zy-5ni" customClass="HistoryController" customModule="Biking_Tracker" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="iOw-bu-WHm">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="Lxw-LN-ZhV">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="historyCell" id="Lxw-LN-ZhV" customClass="HistoryCell" customModule="Biking_Tracker" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Lxw-LN-ZhV" id="MSa-R2-mFV">
@@ -34,10 +34,42 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="History" id="JTy-1x-G15"/>
+                    <connections>
+                        <segue destination="8KY-cp-kbD" kind="show" identifier="showHistoryItem" id="VBi-pA-rHj"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DRD-i9-mXy" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2353" y="636"/>
+        </scene>
+        <!--History Item Controller-->
+        <scene sceneID="fgW-Ax-NG0">
+            <objects>
+                <viewController id="8KY-cp-kbD" customClass="HistoryItemController" customModule="Biking_Tracker" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="zVP-EQ-bbv">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="Zqm-L1-AA9">
+                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
+                            </mapView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="Zqm-L1-AA9" firstAttribute="bottom" secondItem="ura-Er-Vby" secondAttribute="bottom" id="DfG-jG-j5l"/>
+                            <constraint firstAttribute="trailing" secondItem="Zqm-L1-AA9" secondAttribute="trailing" id="H9o-vY-fVf"/>
+                            <constraint firstItem="Zqm-L1-AA9" firstAttribute="leading" secondItem="ura-Er-Vby" secondAttribute="leading" id="eIj-sT-pGf"/>
+                            <constraint firstItem="Zqm-L1-AA9" firstAttribute="top" secondItem="ura-Er-Vby" secondAttribute="top" id="w5H-LT-ptM"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="ura-Er-Vby"/>
+                    </view>
+                    <connections>
+                        <outlet property="mapView" destination="Zqm-L1-AA9" id="cKI-rB-bqY"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rfN-42-9uR" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2352.8000000000002" y="1420.8395802098951"/>
         </scene>
         <!--Home-->
         <scene sceneID="PFG-ck-1V1">
